[gd_scene load_steps=16 format=3 uid="uid://br7ttb4nuqshi"]

[ext_resource type="Theme" uid="uid://bqt13gd00jakt" path="res://Themes/Theme.tres" id="1_fg0n7"]
[ext_resource type="Script" path="res://Code/SceneCode/Screens/ItemMenu.gd" id="2_tmbiy"]
[ext_resource type="PackedScene" uid="uid://bniepn4mhvn2g" path="res://Scene/SideMenus/Item/IteminInv.tscn" id="3_tkvo7"]
[ext_resource type="PackedScene" uid="uid://33e3m1sa4rwa" path="res://Scene/SideMenus/Item/IteminChar.tscn" id="4_p3rtt"]
[ext_resource type="Material" uid="uid://g13xvkbcpfoj" path="res://Themes/ButtonStyle/Dock.tres" id="5_d1on3"]
[ext_resource type="PackedScene" uid="uid://ds5nhcsd3vdcs" path="res://Scene/Constants/InsertNumber.tscn" id="5_nqupu"]
[ext_resource type="Texture2D" uid="uid://dl471fyo3f1ka" path="res://Icons/Fire.png" id="6_dibxn"]
[ext_resource type="Texture2D" uid="uid://vanfvr734cq5" path="res://Icons/Water.png" id="7_35fpj"]
[ext_resource type="Texture2D" uid="uid://ccs1i0vinm0bf" path="res://Icons/Elec.png" id="8_gbkaq"]
[ext_resource type="Texture2D" uid="uid://ca5svcpu5gu86" path="res://Art/white-circle-icon-7-1397688648.png" id="9_tmpu2"]
[ext_resource type="Texture2D" uid="uid://bvl2silysy33m" path="res://Icons/keyboard-icons-_0000s_0023__Group_.png" id="10_j5qhf"]
[ext_resource type="Texture2D" uid="uid://1k8pas0ikvxp" path="res://Icons/Crush.png" id="11_6o7u6"]
[ext_resource type="Texture2D" uid="uid://icdg55qighh1" path="res://Art/arrow.png" id="12_w4lix"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ak5bq"]
bg_color = Color(0.231373, 0.329412, 0.431373, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.0941176, 0.0941176, 0.270588, 1)
border_blend = true
corner_detail = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4fmou"]
bg_color = Color(0.231373, 0.329412, 0.431373, 1)
border_width_left = 5
corner_detail = 12

[node name="ItemMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -4.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_fg0n7")
script = ExtResource("2_tmbiy")
InvItemPanel = ExtResource("3_tkvo7")
playerItemPanel = ExtResource("4_p3rtt")
itemLimit = 4
scrollDeadzone = Vector2(280, 420)
metadata/_edit_pinned_properties_ = [&"scrollDeadzone"]

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 1276.0
offset_bottom = 779.0

[node name="Title" type="PanelContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(10, 50)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Title"]
layout_mode = 2

[node name="RichTextLabel2" type="RichTextLabel" parent="VBoxContainer/Title/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "
<- Gear Menu"

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/Title/HBoxContainer"]
custom_minimum_size = Vector2(1050, 0)
layout_mode = 2
bbcode_enabled = true
text = "[center]ITEM SELECTION MENU[/center]
[center]Accept: A			Cancel: B			Sort: Y			Set Autofill: X			Prev Char: L		Next Char: R	 		Prev Menu: ZL		Next Menu: ZR	[/center]"

[node name="RichTextLabel3" type="RichTextLabel" parent="VBoxContainer/Title/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
bbcode_enabled = true
text = "
[right]Chip Menu -->[/right]"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="ItemSelection" type="PanelContainer" parent="VBoxContainer/HBoxContainer"]
material = ExtResource("5_d1on3")
use_parent_material = true
clip_contents = true
custom_minimum_size = Vector2(650, 725)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ak5bq")

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/ItemSelection"]
layout_mode = 2

[node name="INVENTORYTEXT" type="PanelContainer" parent="VBoxContainer/HBoxContainer/ItemSelection/VBoxContainer"]
custom_minimum_size = Vector2(0, 42)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/ItemSelection/VBoxContainer/INVENTORYTEXT"]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/HBoxContainer/ItemSelection/VBoxContainer/INVENTORYTEXT/HBoxContainer"]
custom_minimum_size = Vector2(500, 42)
layout_mode = 2
bbcode_enabled = true
text = "[center]INVENTORY[/center]"
metadata/_edit_lock_ = true

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/HBoxContainer/ItemSelection/VBoxContainer/INVENTORYTEXT/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 5
theme_override_constants/margin_bottom = 5

[node name="Panel" type="Panel" parent="VBoxContainer/HBoxContainer/ItemSelection/VBoxContainer/INVENTORYTEXT/HBoxContainer/MarginContainer"]
layout_mode = 2

[node name="OptionButton" type="OptionButton" parent="VBoxContainer/HBoxContainer/ItemSelection/VBoxContainer/INVENTORYTEXT/HBoxContainer/MarginContainer/Panel"]
layout_mode = 2
offset_right = 101.0
offset_bottom = 32.0
focus_mode = 0
item_count = 3
selected = 0
allow_reselect = true
popup/item_0/text = "Sort Alpha"
popup/item_0/id = 1
popup/item_1/text = "Sort Owners"
popup/item_1/id = 2
popup/item_2/text = "Sort Leftover"
popup/item_2/id = 3

[node name="ChipSelection" type="ScrollContainer" parent="VBoxContainer/HBoxContainer/ItemSelection/VBoxContainer"]
custom_minimum_size = Vector2(665, 460)
layout_mode = 2
follow_focus = true
scroll_vertical_custom_step = 100.0
horizontal_scroll_mode = 0
vertical_scroll_mode = 3

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/HBoxContainer/ItemSelection/VBoxContainer/ChipSelection"]
layout_mode = 2
columns = 2

[node name="Info" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/ItemSelection/VBoxContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2

[node name="QuickInfo" type="MarginContainer" parent="VBoxContainer/HBoxContainer/ItemSelection/VBoxContainer/Info"]
layout_mode = 2
theme_override_constants/margin_left = 10

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/ItemSelection/VBoxContainer/Info/QuickInfo"]
layout_mode = 2

[node name="Title" type="PanelContainer" parent="VBoxContainer/HBoxContainer/ItemSelection/VBoxContainer/Info/QuickInfo/HBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/HBoxContainer/ItemSelection/VBoxContainer/Info/QuickInfo/HBoxContainer/Title"]
layout_mode = 2
bbcode_enabled = true
text = "[center]SELECTED CHIP[/center]"
metadata/_edit_lock_ = true

[node name="Details" type="PanelContainer" parent="VBoxContainer/HBoxContainer/ItemSelection/VBoxContainer/Info/QuickInfo/HBoxContainer"]
custom_minimum_size = Vector2(440, 50)
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/HBoxContainer/ItemSelection/VBoxContainer/Info/QuickInfo/HBoxContainer/Details"]
layout_mode = 2
bbcode_enabled = true
text = "[center] 60/60 | OWNERS: 
DREAMER 15/15 | LONNA 15/15 | DAMIR 15/15 | PEPPER 15/15[/center]"
metadata/_edit_lock_ = true

[node name="Description" type="PanelContainer" parent="VBoxContainer/HBoxContainer/ItemSelection/VBoxContainer/Info"]
custom_minimum_size = Vector2(0, 125)
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/HBoxContainer/ItemSelection/VBoxContainer/Info/Description"]
layout_mode = 2

[node name="Button" type="Button" parent="VBoxContainer/HBoxContainer/ItemSelection"]
visible = false
layout_mode = 2

[node name="CurrentCharItems" type="PanelContainer" parent="VBoxContainer/HBoxContainer"]
material = ExtResource("5_d1on3")
use_parent_material = true
custom_minimum_size = Vector2(0, 725)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_4fmou")

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/CurrentCharItems"]
layout_mode = 2

[node name="CharacterInfo" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/CurrentCharItems/VBoxContainer"]
custom_minimum_size = Vector2(600, 10)
layout_mode = 2

[node name="Character" type="PanelContainer" parent="VBoxContainer/HBoxContainer/CurrentCharItems/VBoxContainer/CharacterInfo"]
custom_minimum_size = Vector2(180, 40)
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/HBoxContainer/CurrentCharItems/VBoxContainer/CharacterInfo/Character"]
layout_mode = 2
bbcode_enabled = true
text = "CHARACTER HP: 100
LP:99 TP: 100 CPU: 100"

[node name="Player1Element" type="TabContainer" parent="VBoxContainer/HBoxContainer/CurrentCharItems/VBoxContainer/CharacterInfo"]
self_modulate = Color(0.0313726, 0.0588235, 0.254902, 1)
custom_minimum_size = Vector2(45, 40)
layout_mode = 2
tabs_visible = false

[node name="Fire" type="TextureRect" parent="VBoxContainer/HBoxContainer/CurrentCharItems/VBoxContainer/CharacterInfo/Player1Element"]
modulate = Color(1, 0.160784, 0.223529, 1)
layout_mode = 2
texture = ExtResource("6_dibxn")
expand_mode = 4
stretch_mode = 5
metadata/_edit_lock_ = true

[node name="Water" type="TextureRect" parent="VBoxContainer/HBoxContainer/CurrentCharItems/VBoxContainer/CharacterInfo/Player1Element"]
visible = false
modulate = Color(0.298039, 0.384314, 1, 1)
layout_mode = 2
texture = ExtResource("7_35fpj")
expand_mode = 4
metadata/_edit_lock_ = true

[node name="Elec" type="TextureRect" parent="VBoxContainer/HBoxContainer/CurrentCharItems/VBoxContainer/CharacterInfo/Player1Element"]
visible = false
modulate = Color(1, 1, 0.333333, 0.682353)
layout_mode = 2
texture = ExtResource("8_gbkaq")
expand_mode = 4
metadata/_edit_lock_ = true

[node name="Neutral" type="TextureRect" parent="VBoxContainer/HBoxContainer/CurrentCharItems/VBoxContainer/CharacterInfo/Player1Element"]
visible = false
layout_mode = 2
texture = ExtResource("9_tmpu2")
expand_mode = 4
metadata/_edit_lock_ = true

[node name="PlayerPhyElement1" type="TabContainer" parent="VBoxContainer/HBoxContainer/CurrentCharItems/VBoxContainer/CharacterInfo"]
self_modulate = Color(0.0313726, 0.0588235, 0.254902, 1)
custom_minimum_size = Vector2(45, 0)
layout_mode = 2
tabs_visible = false

[node name="Slash" type="TextureRect" parent="VBoxContainer/HBoxContainer/CurrentCharItems/VBoxContainer/CharacterInfo/PlayerPhyElement1"]
modulate = Color(0, 0.615686, 0.192157, 0.682353)
layout_mode = 2
texture = ExtResource("10_j5qhf")
expand_mode = 3
metadata/_edit_lock_ = true

[node name="Crush" type="TextureRect" parent="VBoxContainer/HBoxContainer/CurrentCharItems/VBoxContainer/CharacterInfo/PlayerPhyElement1"]
visible = false
modulate = Color(0.627451, 0.364706, 0.0470588, 0.682353)
layout_mode = 2
texture = ExtResource("11_6o7u6")
expand_mode = 2
metadata/_edit_lock_ = true

[node name="Pierce" type="TextureRect" parent="VBoxContainer/HBoxContainer/CurrentCharItems/VBoxContainer/CharacterInfo/PlayerPhyElement1"]
visible = false
modulate = Color(1, 0.588235, 0.12549, 0.682353)
layout_mode = 2
texture = ExtResource("12_w4lix")
expand_mode = 2
metadata/_edit_lock_ = true

[node name="Stats" type="PanelContainer" parent="VBoxContainer/HBoxContainer/CurrentCharItems/VBoxContainer/CharacterInfo"]
custom_minimum_size = Vector2(235, 40)
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/HBoxContainer/CurrentCharItems/VBoxContainer/CharacterInfo/Stats"]
layout_mode = 2
bbcode_enabled = true
text = "[center]STR: 60		TGH: 60		SPD: 60
BAL: 60		RES: 60		LUK: 60[/center]"
metadata/_edit_lock_ = true

[node name="ItemBox" type="PanelContainer" parent="VBoxContainer/HBoxContainer/CurrentCharItems/VBoxContainer/CharacterInfo"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/CurrentCharItems/VBoxContainer/CharacterInfo/ItemBox"]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/HBoxContainer/CurrentCharItems/VBoxContainer/CharacterInfo/ItemBox/HBoxContainer"]
custom_minimum_size = Vector2(75, 0)
layout_mode = 2
bbcode_enabled = true
text = "[center][color=gray]Items 
8/8 [/color]"

[node name="CurrentItems" type="ScrollContainer" parent="VBoxContainer/HBoxContainer/CurrentCharItems/VBoxContainer"]
custom_minimum_size = Vector2(0, 460)
layout_mode = 2
follow_focus = true
horizontal_scroll_mode = 0
vertical_scroll_mode = 3

[node name="PanelContainer" type="GridContainer" parent="VBoxContainer/HBoxContainer/CurrentCharItems/VBoxContainer/CurrentItems"]
layout_mode = 2
columns = 2

[node name="Info" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/CurrentCharItems/VBoxContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2

[node name="QuickInfo" type="MarginContainer" parent="VBoxContainer/HBoxContainer/CurrentCharItems/VBoxContainer/Info"]
layout_mode = 2
theme_override_constants/margin_left = 10

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/CurrentCharItems/VBoxContainer/Info/QuickInfo"]
layout_mode = 2

[node name="Title" type="PanelContainer" parent="VBoxContainer/HBoxContainer/CurrentCharItems/VBoxContainer/Info/QuickInfo/HBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/HBoxContainer/CurrentCharItems/VBoxContainer/Info/QuickInfo/HBoxContainer/Title"]
layout_mode = 2
bbcode_enabled = true
text = "[center]SELECTED CHIP[/center]"
metadata/_edit_lock_ = true

[node name="Details" type="PanelContainer" parent="VBoxContainer/HBoxContainer/CurrentCharItems/VBoxContainer/Info/QuickInfo/HBoxContainer"]
custom_minimum_size = Vector2(370, 50)
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/HBoxContainer/CurrentCharItems/VBoxContainer/Info/QuickInfo/HBoxContainer/Details"]
layout_mode = 2
bbcode_enabled = true
text = "[center]60/60 | YELLOW CHIP[/center]"
metadata/_edit_lock_ = true

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/HBoxContainer/CurrentCharItems/VBoxContainer/Info"]
layout_mode = 2

[node name="Description" type="PanelContainer" parent="VBoxContainer/HBoxContainer/CurrentCharItems/VBoxContainer/Info/MarginContainer"]
custom_minimum_size = Vector2(0, 125)
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/HBoxContainer/CurrentCharItems/VBoxContainer/Info/MarginContainer/Description"]
layout_mode = 2
metadata/_edit_lock_ = true

[node name="Arrow" type="Sprite2D" parent="."]
visible = false
position = Vector2(5, -15)
rotation = 0.523599
scale = Vector2(-0.474, -0.134)
texture = ExtResource("12_w4lix")
offset = Vector2(-38, 245.462)

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(699, 136)

[node name="InsertNumber" parent="." instance=ExtResource("5_nqupu")]
visible = false
layout_mode = 1
offset_left = -93.0
offset_top = -54.0
offset_right = -1286.0
offset_bottom = -766.0

[connection signal="item_selected" from="VBoxContainer/HBoxContainer/ItemSelection/VBoxContainer/INVENTORYTEXT/HBoxContainer/MarginContainer/Panel/OptionButton" to="." method="_on_option_button_item_selected"]
[connection signal="makeNoise" from="InsertNumber" to="." method="_on_insert_number_make_noise"]
